--- a/config/database.yml
+++ b/config/database.yml
@@ -81,9 +81,10 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database: gym_fitness_api_production
-    username: gym_fitness_api
-    password: <%= ENV["GYM_FITNESS_API_DATABASE_PASSWORD"] %>
+    # database: gym_fitness_api_production
+    # username: gym_fitness_api
+    # password: <%= ENV["GYM_FITNESS_API_DATABASE_PASSWORD"] %>
+    url: <%= ENV["DATABASE_URL"] %>
   cache:
     <<: *primary_production
     database: gym_fitness_api_production_cache
