--- a/config/database.yml
+++ b/config/database.yml
@@ -79,7 +79,7 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
+  # primary: &primary_production
     <<: *default
     url: <%= ENV["DATABASE_URL"] %>
   #   database: gym_fitness_api_production
