trying to deploy

--- a/config/database.yml
+++ b/config/database.yml
@@ -79,21 +79,22 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
+  primary: 
+  # &primary_production
     <<: *default
     # url: <%= ENV["DATABASE_URL"] %>
     database: gym_fitness_api_production
     username: gym_fitness_api
     password: <%= ENV["GYM_FITNESS_API_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: gym_fitness_api_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: gym_fitness_api_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: gym_fitness_api_production_cable
-    migrations_paths: db/cable_migrate
+  # cache:
+  #   <<: *primary_production
+  #   database: gym_fitness_api_production_cache
+  #   migrations_paths: db/cache_migrate
+  # queue:
+  #   <<: *primary_production
+  #   database: gym_fitness_api_production_queue
+  #   migrations_paths: db/queue_migrate
+  # cable:
+  #   <<: *primary_production
+  #   database: gym_fitness_api_production_cable
+  #   migrations_paths: db/cable_migrate
