I hope this work

--- a/config/database.yml
+++ b/config/database.yml
@@ -80,12 +80,12 @@ test:
 #
 production:
   primary: 
-  # &primary_production
     <<: *default
-    # url: <%= ENV["DATABASE_URL"] %>
-    database: gym_fitness_api_production
-    username: gym_fitness_api
-    password: <%= ENV["GYM_FITNESS_API_DATABASE_PASSWORD"] %>
+    url: <%= ENV["DATABASE_URL"] %>
+  # &primary_production
+    # database: gym_fitness_api_production
+    # username: gym_fitness_api
+    # password: <%= ENV["GYM_FITNESS_API_DATABASE_PASSWORD"] %>
   # cache:
   #   <<: *primary_production
   #   database: gym_fitness_api_production_cache
