--- a/config/database.yml
+++ b/config/database.yml
@@ -79,13 +79,13 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: 
+  primary: &primary_production
     <<: *default
     url: <%= ENV["DATABASE_URL"] %>
-  # &primary_production
-    # database: gym_fitness_api_production
-    # username: gym_fitness_api
-    # password: <%= ENV["GYM_FITNESS_API_DATABASE_PASSWORD"] %>
+    
+  # database: gym_fitness_api_production
+  # username: gym_fitness_api
+  # password: <%= ENV["GYM_FITNESS_API_DATABASE_PASSWORD"] %>
   # cache:
   #   <<: *primary_production
   #   database: gym_fitness_api_production_cache
